added resume line

--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
   </head>
   <body>
     <div>
-      Welcome! My name is Brian, and I'm a senior at the University of Michigan studying computer science.
+      <header>
+        Welcome! My name is Brian, and I'm a senior at the University of Michigan studying computer science.
+      </header>
     </div>
+    <p>
+      An updated copy of my resumé can be found <a href = "https://drive.google.com/file/d/1oH7ecn5MT9GPFYI3QAh0WH-bMm_hxhAF/view?usp=sharing">here!</a>
+    </p>
   </body>
 </html>
