resume link opens in new tab

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </header>
     </div>
     <p>
-      An updated copy of my resumé can be found <a href = "https://drive.google.com/file/d/1oH7ecn5MT9GPFYI3QAh0WH-bMm_hxhAF/view?usp=sharing">here!</a>
+      An updated copy of my resumé can be found <a href = "https://drive.google.com/file/d/1oH7ecn5MT9GPFYI3QAh0WH-bMm_hxhAF/view?usp=sharing" target="_blank">here!</a>
     </p>
   </body>
 </html>
